# vcube

./: .gitignore  CMakeLists.txt  README.md  test64.txt
doc/: speffz.md
src/: alloc.cpp  alloc.h  avx2_cube.h  const-cubes.h  cube.cpp  cube.h  cube6.h  gen-const-cubes.cpp  nxprune.cpp  nxprune.h  nxprune_generator.h  nxsolve.cpp  nxsolve.h  sse_cube.h  types.h  util.cpp  util.h  vc-optimal.cpp
tests/: CMakeLists.txt  Cube6Test.cpp  CubeTest.cpp  EdgeCubeTest.cpp  MoveSeqTest.cpp  NxPruneTest.cpp  RunAllTests.cpp  test_util.h
